lustre/include/lustre/lustre_user.h
@@ -46,9 +46,12 @@
  * @{
  */
 
-#ifndef __KERNEL__
-#include <stdio.h>
-#include <libcfs/posix/posix-types.h>
+#include <libcfs/types.h>
+
+#ifdef __KERNEL__
+# include <linux/string.h> /* snprintf() */
+#else
+# include <stdio.h> /* snprintf() */
 #endif
 #include <lustre/ll_fiemap.h>
 #if defined(__linux__)
